tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-2.fathom
//~ exit-code = 1

f x y
